gl31-master/src/test/deca/context/invalid/complet/sous_type.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 14: Erreur, A n'est pas un sous-type de B
//
// Historique:
//    cree le 20/01/2021
class A{
    protected int index;
}
class B extends A{

    int getIndex(A a){
        return a.index;
    }
}
